force-app/main/default/objects/Test_Object__c/fields/Ayo_AutoNumber__c.field-meta.xml
<CustomField>
    <fullName>Ayo_AutoNumber__c</fullName>
    <description>Testing</description>
    <displayFormat>A-{0000}</displayFormat>
    <label>Ayo AutoNumber</label>
    <type>AutoNumber</type>
</CustomField>