force-app/main/default/objects/Test_Object__c/fields/Push_Pull_Text__c.field-meta.xml
<CustomField>
    <fullName>Push_Pull_Text__c</fullName>
    <description>Push pull text</description>
    <label>Push Pull Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>