force-app/main/default/objects/Test_Object__c/fields/Super_Check_Box__c.field-meta.xml
<CustomField>
    <fullName>Super_Check_Box__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Testing</description>
    <inlineHelpText>Testing</inlineHelpText>
    <label>Super Check Box</label>
    <type>Checkbox</type>
</CustomField>